another attempt to fix flip cards on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,12 @@ footer {
   height: 250px;
   margin: 15px;
   perspective: 800px;
+  transition: transform .2s;
+}
+
+.card-container:hover {
+  cursor: pointer;
+  transform: scale(1.03);
 }
 
 .card-inner {
@@ -303,7 +309,7 @@ footer {
 }
 
 .flip {
-  transform: rotateY(180deg) translateZ(1px); box-shadow: -3px 3px 6px -2px black;
+  transform: rotateY(180deg); box-shadow: -3px 3px 6px -2px black;
 }
 
 .card-front, .card-back {
@@ -327,6 +333,7 @@ footer {
 
 .skills-description {
   margin: 0;
+  font-size: 120%;
 }
 
 .card-back {
